# Qunomon_tutorial_house_prices

./: README.md
best_practice_3/: pyproject.toml
best_practice_3/notebooks/: sandbox.ipynb  sandbox2.ipynb
best_practice_3/resources/house_prices/: cutmix_train_housing.csv  gmm_train_housing.csv  mixup_train_housing.csv  mixup_train_housing3.csv  standardization_housing.csv  test_housing.csv  train_housing.csv
best_practice_3/resources/models/: best_model.pth  best_model2.pth
